--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "19.1.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "19.1.0",
+    "swiper": "^12.0.2",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7"
   },
